--- a/betterdefaultbiomes/lang/zh_tw.json
+++ b/betterdefaultbiomes/lang/zh_tw.json
@@ -127,22 +127,22 @@
   "block.betterdefaultbiomes.sand_castle": "沙堡",
   "block.betterdefaultbiomes.seashell": "海貝",
   "block.betterdefaultbiomes.small_rock_stone": "石子",
-  "block.betterdefaultbiomes.small_rock_cobble": "圓石石子",
-  "block.betterdefaultbiomes.small_rock_mossy": "苔石石子",
-  "block.betterdefaultbiomes.small_rock_andesite": "安山巖石子",
-  "block.betterdefaultbiomes.small_rock_diorite": "閃長巖石子",
-  "block.betterdefaultbiomes.small_rock_granite": "花崗巖石子",
-  "block.betterdefaultbiomes.small_rock_sandstone": "砂巖石子",
-  "block.betterdefaultbiomes.small_rock_red_sandstone": "紅砂巖石子",
+  "block.betterdefaultbiomes.small_rock_cobble": "鵝卵石石子",
+  "block.betterdefaultbiomes.small_rock_mossy": "青苔鵝卵石石子",
+  "block.betterdefaultbiomes.small_rock_andesite": "安山岩石子",
+  "block.betterdefaultbiomes.small_rock_diorite": "閃長岩石子",
+  "block.betterdefaultbiomes.small_rock_granite": "花崗岩石子",
+  "block.betterdefaultbiomes.small_rock_sandstone": "砂岩石子",
+  "block.betterdefaultbiomes.small_rock_red_sandstone": "紅砂岩石子",
   "block.betterdefaultbiomes.starfish_white": "白色海星",
   "block.betterdefaultbiomes.starfish_orange": "橙色海星",
-  "block.betterdefaultbiomes.starfish_magenta": "品紅色海星",
-  "block.betterdefaultbiomes.starfish_light_blue": "淡藍色海星",
+  "block.betterdefaultbiomes.starfish_magenta": "洋紅色海星",
+  "block.betterdefaultbiomes.starfish_light_blue": "淺藍色海星",
   "block.betterdefaultbiomes.starfish_yellow": "黃色海星",
-  "block.betterdefaultbiomes.starfish_lime": "黃綠色海星",
+  "block.betterdefaultbiomes.starfish_lime": "淺綠色海星",
   "block.betterdefaultbiomes.starfish_pink": "粉紅色海星",
   "block.betterdefaultbiomes.starfish_gray": "灰色海星",
-  "block.betterdefaultbiomes.starfish_light_gray": "淡灰色海星",
+  "block.betterdefaultbiomes.starfish_light_gray": "淺灰色海星",
   "block.betterdefaultbiomes.starfish_cyan": "青色海星",
   "block.betterdefaultbiomes.starfish_purple": "紫色海星",
   "block.betterdefaultbiomes.starfish_blue": "藍色海星",
@@ -152,13 +152,13 @@
   "block.betterdefaultbiomes.starfish_black": "黑色海星",
   "block.betterdefaultbiomes.starfish_wall_white": "白色海星",
   "block.betterdefaultbiomes.starfish_wall_orange": "橙色海星",
-  "block.betterdefaultbiomes.starfish_wall_magenta": "品紅色海星",
-  "block.betterdefaultbiomes.starfish_wall_light_blue": "淡藍色海星",
+  "block.betterdefaultbiomes.starfish_wall_magenta": "洋紅色海星",
+  "block.betterdefaultbiomes.starfish_wall_light_blue": "淺藍色海星",
   "block.betterdefaultbiomes.starfish_wall_yellow": "黃色海星",
-  "block.betterdefaultbiomes.starfish_wall_lime": "黃綠色海星",
+  "block.betterdefaultbiomes.starfish_wall_lime": "淺綠色海星",
   "block.betterdefaultbiomes.starfish_wall_pink": "粉紅色海星",
   "block.betterdefaultbiomes.starfish_wall_gray": "灰色海星",
-  "block.betterdefaultbiomes.starfish_wall_light_gray": "淡灰色海星",
+  "block.betterdefaultbiomes.starfish_wall_light_gray": "淺灰色海星",
   "block.betterdefaultbiomes.starfish_wall_cyan": "青色海星",
   "block.betterdefaultbiomes.starfish_wall_purple": "紫色海星",
   "block.betterdefaultbiomes.starfish_wall_blue": "藍色海星",
@@ -198,7 +198,7 @@
   "block.betterdefaultbiomes.palm_wood": "棕櫚木",
   "block.betterdefaultbiomes.palm_log_stripped": "去皮棕櫚原木",
   "block.betterdefaultbiomes.palm_wood_stripped": "去皮棕櫚木",
-  "block.betterdefaultbiomes.palm_planks": "棕櫚木板",
+  "block.betterdefaultbiomes.palm_planks": "棕櫚木材",
   "block.betterdefaultbiomes.palm_stairs": "棕櫚木樓梯",
   "block.betterdefaultbiomes.palm_slab": "棕櫚木半磚",
   "block.betterdefaultbiomes.palm_fence": "棕櫚木柵欄",
@@ -216,7 +216,7 @@
   "block.betterdefaultbiomes.swamp_willow_wood": "沼澤柳木",
   "block.betterdefaultbiomes.swamp_willow_log_stripped": "去皮沼澤柳原木",
   "block.betterdefaultbiomes.swamp_willow_wood_stripped": "去皮沼澤柳木",
-  "block.betterdefaultbiomes.swamp_willow_planks": "沼澤柳木板",
+  "block.betterdefaultbiomes.swamp_willow_planks": "沼澤柳木材",
   "block.betterdefaultbiomes.swamp_willow_stairs": "沼澤柳木樓梯",
   "block.betterdefaultbiomes.swamp_willow_slab": "沼澤柳木半磚",
   "block.betterdefaultbiomes.swamp_willow_fence": "沼澤柳木柵欄",
