--- a/bambootweaks/lang/zh_tw.json
+++ b/bambootweaks/lang/zh_tw.json
@@ -20,5 +20,5 @@
   "block.bambootweaks.dry_bamboo_torch": "乾竹火把",
   "block.bambootweaks.dry_bamboo_stairs": "乾竹樓梯",
   "block.bambootweaks.dry_bamboo_door": "乾竹門",
-  "itemGroup.bambootweaks.bambootweaks": "竹制品"
+  "itemGroup.bambootweaks.bambootweaks": "竹製品"
 }
