--- a/cacao/lang/zh_tw.json
+++ b/cacao/lang/zh_tw.json
@@ -8,7 +8,7 @@
   "item.cacao.silicon_mold": "矽模具",
   "item.cacao.filter_cloth": "濾布",
   "item.cacao.cacao_mass_filled_cloth": "裝滿可可膏的濾布",
-  "item.cacao.pressed_cocoa_cone": "錐形壓制可可膏",
+  "item.cacao.pressed_cocoa_cone": "錐形壓製可可膏",
   "item.cacao.manual_food_grinder": "手動食品研磨機",
   "item.cacao.dark_chocolate": "黑巧克力",
   "item.cacao.caramel_dark_chocolate": "焦糖黑巧克力",
