--- a/caffeinated/lang/zh_tw.json
+++ b/caffeinated/lang/zh_tw.json
@@ -6,8 +6,8 @@
   "block.caffeinated.coffee_cauldron": "咖啡鍋",
   "block.caffeinated.coffee_shrub": "咖啡灌木",
   "block.caffeinated.flowering_coffee_shrub": "盛開的咖啡灌木",
-  "block.caffeinated.ground_coffee_block": "磨制咖啡豆塊",
-  "block.caffeinated.ground_coffee_cauldron": "裝有磨制咖啡豆的煉藥鍋",
+  "block.caffeinated.ground_coffee_block": "磨製咖啡豆塊",
+  "block.caffeinated.ground_coffee_cauldron": "裝有磨製咖啡豆的煉藥鍋",
   "block.caffeinated.potted_coffee_shrub": "咖啡灌木盆栽",
   "block.minecraft.banner.caffeinated.java.black": "黑色Java徽標",
   "block.minecraft.banner.caffeinated.java.blue": "藍色Java徽標",
@@ -29,13 +29,13 @@
   "item.caffeinated.coffee_beans": "咖啡豆",
   "item.caffeinated.coffee_berries": "咖啡果",
   "item.caffeinated.coffee_bottle": "咖啡瓶",
-  "item.caffeinated.ground_coffee": "磨制咖啡豆",
+  "item.caffeinated.ground_coffee": "磨製咖啡豆",
   "item.caffeinated.java_banner_pattern": "旗幟圖案",
   "item.caffeinated.java_banner_pattern.desc": "Java徽標",
   "item.caffeinated.tiramisu": "提拉米蘇",
   "subtitles.block.cauldron.brew": "煉藥鍋：烹煮",
   "subtitles.block.cauldron.bubble": "煉藥鍋：冒泡",
   "subtitles.item.coffee_bottle.drink": "咕嚕咕嚕",
-  "subtitles.item.ground_coffee.splash": "磨制咖啡豆：濺起水花",
+  "subtitles.item.ground_coffee.splash": "磨製咖啡豆：濺起水花",
   "stat.caffeinated.coffee_taken": "從煉藥鍋中取出咖啡個數"
 }
