--- a/caffeinefilled/lang/zh_tw.json
+++ b/caffeinefilled/lang/zh_tw.json
@@ -11,18 +11,18 @@
   "advancements.never_sleep.title": "從未睡覺",
   "advancements.pinkarella_special_advancement.descr": "喝下粉色天使特調",
   "advancements.pinkarella_special_advancement.title": "向《屠宰馬》致敬",
-  "block.caffeinefilled.andesite_counter": "安山岩台面",
-  "block.caffeinefilled.blackstone_counter": "黑石台面",
-  "block.caffeinefilled.brick_counter": "紅磚台面",
+  "block.caffeinefilled.andesite_counter": "安山岩吧檯",
+  "block.caffeinefilled.blackstone_counter": "黑石吧檯",
+  "block.caffeinefilled.brick_counter": "紅磚吧檯",
   "block.caffeinefilled.coffee_bean_bag": "袋裝咖啡豆",
   "block.caffeinefilled.coffee_berries_bag": "袋裝咖啡果",
   "block.caffeinefilled.coffee_bush_phase_0": "咖啡叢",
   "block.caffeinefilled.coffee_bush_phase_1": "咖啡叢",
   "block.caffeinefilled.coffee_bush_phase_2": "咖啡叢",
   "block.caffeinefilled.coffee_bush_phase_3": "咖啡叢",
-  "block.caffeinefilled.deepslate_counter": "深板岩台面",
-  "block.caffeinefilled.diorite_counter": "閃長岩台面",
-  "block.caffeinefilled.granite_counter": "花崗岩台面",
+  "block.caffeinefilled.deepslate_counter": "深板岩吧檯",
+  "block.caffeinefilled.diorite_counter": "閃長岩吧檯",
+  "block.caffeinefilled.granite_counter": "花崗岩吧檯",
   "block.caffeinefilled.lemon_crate": "箱裝檸檬",
   "item.caffeinefilled.afogatto": "阿芙佳朵",
   "item.caffeinefilled.americano": "美式咖啡",
@@ -45,7 +45,7 @@
   "item.caffeinefilled.cream": "奶油",
   "item.caffeinefilled.doppio": "雙份濃縮咖啡",
   "item.caffeinefilled.egg_coffee": "蛋咖啡",
-  "item.caffeinefilled.espresso": "意式濃縮咖啡",
+  "item.caffeinefilled.espresso": "義式濃縮咖啡",
   "item.caffeinefilled.flat_white": "馥芮白",
   "item.caffeinefilled.foam": "奶泡",
   "item.caffeinefilled.galao": "葡萄牙奶泡咖啡",
@@ -57,7 +57,7 @@
   "item.caffeinefilled.lemon_ice_cream_bowl": "碗裝檸檬冰淇淋",
   "item.caffeinefilled.lemon_juice_bottle": "檸檬汁瓶",
   "item.caffeinefilled.long_black": "長黑咖啡",
-  "item.caffeinefilled.lungo": "淡濃縮咖啡",
+  "item.caffeinefilled.lungo": "淡式義式濃縮咖啡",
   "item.caffeinefilled.macciato": "瑪奇朵咖啡",
   "item.caffeinefilled.mazagran": "馬紮格蘭冰咖啡",
   "item.caffeinefilled.milk_bottle": "奶瓶",
