--- a/cagedmobs/lang/zh_tw.json
+++ b/cagedmobs/lang/zh_tw.json
@@ -13,18 +13,18 @@
   "item.cagedmobs.dna_sampler.not_sufficient": "這支DNA採樣器的級別不足以對該生物進行採樣",
   "item.cagedmobs.dna_sampler.unknown_entity": "未知生物",
   "item.cagedmobs.dna_sampler.disabled": "已禁用",
-  "item.cagedmobs.speed_i_upgrade": "籠升級：速度 I",
-  "item.cagedmobs.speed_ii_upgrade": "籠升級：速度 II",
-  "item.cagedmobs.speed_iii_upgrade": "籠升級：速度 III",
+  "item.cagedmobs.speed_i_upgrade": "籠子升級：速度 I",
+  "item.cagedmobs.speed_ii_upgrade": "籠子升級：速度 II",
+  "item.cagedmobs.speed_iii_upgrade": "籠子升級：速度 III",
   "item.cagedmobs.speed_i_upgrade.info": "使籠子速度提升50%",
   "item.cagedmobs.speed_ii_upgrade.info": "使籠子速度提升100%",
   "item.cagedmobs.speed_iii_upgrade.info": "使籠子速度提升200%",
-  "item.cagedmobs.cooking_upgrade": "籠升級：烹飪",
-  "item.cagedmobs.lightning_upgrade": "籠升級：閃電",
-  "item.cagedmobs.arrow_upgrade": "籠升級：箭矢",
-  "item.cagedmobs.experience_upgrade": "籠升級：經驗",
-  "item.cagedmobs.looting_upgrade": "籠升級：搶奪",
-  "item.cagedmobs.creative_upgrade": "籠升級：創造",
+  "item.cagedmobs.cooking_upgrade": "籠子升級：烹飪",
+  "item.cagedmobs.lightning_upgrade": "籠子升級：閃電",
+  "item.cagedmobs.arrow_upgrade": "籠子升級：箭矢",
+  "item.cagedmobs.experience_upgrade": "籠子升級：經驗",
+  "item.cagedmobs.looting_upgrade": "籠子升級：搶奪",
+  "item.cagedmobs.creative_upgrade": "籠子升級：創造",
   "item.cagedmobs.cooking_upgrade.info": "自動烹飪可烹飪的生物掉落物",
   "item.cagedmobs.lightning_upgrade.info": "用閃電殺死籠中的生物",
   "item.cagedmobs.arrow_upgrade.info": "用箭矢殺死籠中的生物",
@@ -36,7 +36,7 @@
   "item.cagedmobs.upgrades.stack": "升級可以堆疊",
   "item.cagedmobs.dragon_scale": "龍鱗",
   "item.cagedmobs.nether_star_fragment": "地獄之星碎片",
-  "item.cagedmobs.warden_receptor": "監守者的感受器",
+  "item.cagedmobs.warden_receptor": "伏守者的感受器",
   "item.cagedmobs.sponge_fragment": "海綿碎片",
   "item.cagedmobs.honey_drop": "蜂蜜滴",
   "item.cagedmobs.milk_drop": "牛奶滴",
@@ -44,7 +44,7 @@
   "item.cagedmobs.empty_spawn_egg": "空的生怪蛋",
   "item.cagedmobs.star_infused_netherite_ingot": "注星獄髓錠",
   "item.cagedmobs.star_infused_netherite_nugget": "注星獄髓粒",
-  "item.cagedmobs.crystallized_experience.info": "在使用籠升級：經驗時會掉落",
+  "item.cagedmobs.crystallized_experience.info": "在使用籠子升級：經驗時會掉落",
   "item.cagedmobs.crystallized_experience.info2": "右鍵消耗",
   "item.cagedmobs.crystallized_experience.info3": "Shift+右鍵消耗全部",
   "block.cagedmobs.mob_cage": "生物籠",
@@ -52,7 +52,7 @@
   "block.cagedmobs.star_infused_netherite_block": "注星獄髓塊",
   "block.cagedmobs.crystallized_experience_block": "結晶經驗塊",
   "block.cagedmobs.mob_cage.envNotSuitable": "籠中的環境不適合該生物。",
-  "block.cagedmobs.mob_cage.mainInfo": "可以根據儲存的DNA樣本去覆制生物的掉落物",
+  "block.cagedmobs.mob_cage.mainInfo": "可以根據儲存的DNA樣本去複製生物的掉落物",
   "block.cagedmobs.mob_cage.envInfo": "需要內設一處適合生物的環境",
   "block.cagedmobs.mob_cage.hoppingInfo": "產生的掉落物將放入下方容器中",
   "block.cagedmobs.mob_cage.upgrading": "可以安裝升級",
@@ -72,9 +72,9 @@
   "jei.tooltip.cagedmobs.entity.amountEqual": "數量：%d",
   "jei.tooltip.cagedmobs.entity.amount": "數量：%d-%d",
   "jei.tooltip.cagedmobs.entity.ticks": "%d秒",
-  "jei.tooltip.cagedmobs.entity.cooking_upgrade": "需要籠升級：烹飪",
-  "jei.tooltip.cagedmobs.entity.lightning_upgrade": "需要籠升級：閃電",
-  "jei.tooltip.cagedmobs.entity.arrow_upgrade": "需要籠升級：箭矢",
+  "jei.tooltip.cagedmobs.entity.cooking_upgrade": "需要籠子升級：烹飪",
+  "jei.tooltip.cagedmobs.entity.lightning_upgrade": "需要籠子升級：閃電",
+  "jei.tooltip.cagedmobs.entity.arrow_upgrade": "需要籠子升級：箭矢",
   "jei.tooltip.cagedmobs.entity.colorItem": "僅由被染色的生物掉落",
   "jei.tooltip.cagedmobs.entity.requiresWater": "需要含水的生物籠",
   "JADE.tooltip.cagedmobs.cage.entity": "生物：",
