--- a/call_of_yucutan/lang/zh_tw.json
+++ b/call_of_yucutan/lang/zh_tw.json
@@ -24,7 +24,7 @@
   "advancements.shoot_back_blow_gun.descr": "利用吹筒來對抗胡拉坎",
   "advancements.shoot_back_blow_gun.title": "以牙還牙",
   "advancements.use_hematite_shield.descr": "利用赤鐵盾遠程改變日光射線的方向",
-  "advancements.use_hematite_shield.title": "人工幹預",
+  "advancements.use_hematite_shield.title": "人工干預",
   "advancements.use_mayan_calendar.descr": "獲得一個瑪雅日歷以跟蹤月相變化",
   "advancements.use_mayan_calendar.title": "追尋月亮",
   "block.call_of_yucutan.ah_puch_idol": "§d阿·普切神像",
