--- a/campful/lang/zh_tw.json
+++ b/campful/lang/zh_tw.json
@@ -11,13 +11,13 @@
   "block.campful.ender_driftwood_campfire": "終界浮木營火",
   "block.campful.ender_river_campfire": "終界桑木營火",
   "block.campful.ender_yucca_campfire": "終界絲蘭木營火",
-  "block.campful.ender_warped_campfire": "終界扭曲蕈營火",
+  "block.campful.ender_warped_campfire": "終界扭曲蕈木營火",
   "block.campful.ender_spruce_campfire": "終界杉木營火",
   "block.campful.ender_maple_campfire": "終界楓木營火",
   "block.campful.ender_jungle_campfire": "終界叢林木營火",
   "block.campful.ender_dark_oak_campfire": "終界黑橡木營火",
-  "block.campful.ender_crimson_campfire": "終界緋紅蕈營火",
-  "block.campful.ender_birch_campfire": "終界白樺木營火",
+  "block.campful.ender_crimson_campfire": "終界緋紅蕈木營火",
+  "block.campful.ender_birch_campfire": "終界樺木營火",
   "block.campful.ender_acacia_campfire": "終界相思木營火",
   "block.endergetic.ender_campfire": "終界橡木營火",
   "block.campful.soul_cypress_campfire": "靈魂絲柏木營火",
@@ -31,13 +31,13 @@
   "block.campful.soul_driftwood_campfire": "靈魂浮木營火",
   "block.campful.soul_river_campfire": "靈魂桑木營火",
   "block.campful.soul_yucca_campfire": "靈魂絲蘭木營火",
-  "block.campful.soul_warped_campfire": "靈魂扭曲蕈營火",
+  "block.campful.soul_warped_campfire": "靈魂扭曲蕈木營火",
   "block.campful.soul_spruce_campfire": "靈魂杉木營火",
   "block.campful.soul_maple_campfire": "靈魂楓木營火",
   "block.campful.soul_jungle_campfire": "靈魂叢林木營火",
   "block.campful.soul_dark_oak_campfire": "靈魂黑橡木營火",
-  "block.campful.soul_crimson_campfire": "靈魂緋紅蕈營火",
-  "block.campful.soul_birch_campfire": "靈魂白樺木營火",
+  "block.campful.soul_crimson_campfire": "靈魂緋紅蕈木營火",
+  "block.campful.soul_birch_campfire": "靈魂樺木營火",
   "block.campful.soul_acacia_campfire": "靈魂相思木營火",
   "block.campful.cypress_campfire": "絲柏木營火",
   "block.campful.redbud_campfire": "紫荊木營火",
@@ -51,12 +51,12 @@
   "block.campful.driftwood_campfire": "浮木營火",
   "block.campful.river_campfire": "桑木營火",
   "block.campful.yucca_campfire": "絲蘭木營火",
-  "block.campful.warped_campfire": "扭曲蕈營火",
+  "block.campful.warped_campfire": "扭曲蕈木營火",
   "block.campful.spruce_campfire": "杉木營火",
   "block.campful.maple_campfire": "楓木營火",
   "block.campful.jungle_campfire": "叢林木營火",
   "block.campful.dark_oak_campfire": "黑橡木營火",
-  "block.campful.crimson_campfire": "緋紅蕈營火",
-  "block.campful.birch_campfire": "白樺木營火",
+  "block.campful.crimson_campfire": "緋紅蕈木營火",
+  "block.campful.birch_campfire": "樺木營火",
   "block.campful.acacia_campfire": "相思木營火"
 }
