--- a/candlelight/lang/zh_tw.json
+++ b/candlelight/lang/zh_tw.json
@@ -19,12 +19,12 @@
   "block.candlelight.basalt_stove": "玄武岩爐竈",
   "block.candlelight.beef_wellington_block": "惠靈頓牛排",
   "block.candlelight.beetroot_crate": "袋裝甜菜",
-  "block.candlelight.birch_big_table": "白樺木大桌",
-  "block.candlelight.birch_cabinet": "白樺木櫥櫃",
-  "block.candlelight.birch_chair": "白樺木椅子",
-  "block.candlelight.birch_drawer": "白樺木抽屜",
-  "block.candlelight.birch_shelf": "白樺木置物架",
-  "block.candlelight.birch_table": "白樺木桌",
+  "block.candlelight.birch_big_table": "樺木大桌",
+  "block.candlelight.birch_cabinet": "樺木櫥櫃",
+  "block.candlelight.birch_chair": "樺木椅子",
+  "block.candlelight.birch_drawer": "樺木抽屜",
+  "block.candlelight.birch_shelf": "樺木置物架",
+  "block.candlelight.birch_table": "樺木桌",
   "block.candlelight.cabinet": "櫥櫃",
   "block.candlelight.canbeplaced.tooltip": "可放置",
   "block.candlelight.carrot_crate": "袋裝胡蘿蔔",
@@ -42,12 +42,12 @@
   "block.candlelight.cobblestone_stove": "石頭爐竈",
   "block.candlelight.cooking_pan": "平底鍋",
   "block.candlelight.cooking_pot": "湯鍋",
-  "block.candlelight.crimson_big_table": "緋紅蕈大桌",
-  "block.candlelight.crimson_cabinet": "緋紅蕈櫥櫃",
-  "block.candlelight.crimson_chair": "緋紅蕈椅子",
-  "block.candlelight.crimson_drawer": "緋紅蕈抽屜",
-  "block.candlelight.crimson_shelf": "緋紅蕈置物架",
-  "block.candlelight.crimson_table": "緋紅蕈桌",
+  "block.candlelight.crimson_big_table": "緋紅蕈木大桌",
+  "block.candlelight.crimson_cabinet": "緋紅蕈木櫥櫃",
+  "block.candlelight.crimson_chair": "緋紅蕈木椅子",
+  "block.candlelight.crimson_drawer": "緋紅蕈木抽屜",
+  "block.candlelight.crimson_shelf": "緋紅蕈木置物架",
+  "block.candlelight.crimson_table": "緋紅蕈木桌",
   "block.candlelight.dark_oak_big_table": "黑橡木大桌",
   "block.candlelight.dark_oak_cabinet": "黑橡木櫥櫃",
   "block.candlelight.dark_oak_chair": "黑橡木椅子",
@@ -137,18 +137,18 @@
   "block.candlelight.table_sign": "桌標",
   "block.candlelight.tomato_crate": "袋裝番茄",
   "block.candlelight.tomato_crop": "番茄種子",
-  "block.candlelight.tomato_mozzarella_block": "番茄幹酪沙拉",
+  "block.candlelight.tomato_mozzarella_block": "番茄乾酪沙拉",
   "block.candlelight.tomatoes_wild": "野生番茄",
   "block.candlelight.tool_rack": "廚具架",
   "block.candlelight.typewriter.tooltip": "添加信箋後可書寫信件",
   "block.candlelight.typewriter_copper": "銅打字機",
   "block.candlelight.typewriter_iron": "鐵打字機",
-  "block.candlelight.warped_big_table": "扭曲蕈大桌",
-  "block.candlelight.warped_cabinet": "扭曲蕈櫥櫃",
-  "block.candlelight.warped_chair": "扭曲蕈椅子",
-  "block.candlelight.warped_drawer": "扭曲蕈抽屜",
-  "block.candlelight.warped_shelf": "扭曲蕈置物架",
-  "block.candlelight.warped_table": "扭曲蕈桌",
+  "block.candlelight.warped_big_table": "扭曲蕈木大桌",
+  "block.candlelight.warped_cabinet": "扭曲蕈木櫥櫃",
+  "block.candlelight.warped_chair": "扭曲蕈木椅子",
+  "block.candlelight.warped_drawer": "扭曲蕈木抽屜",
+  "block.candlelight.warped_shelf": "扭曲蕈木置物架",
+  "block.candlelight.warped_table": "扭曲蕈木桌",
   "block.candlelight.wild_lettuce": "野生生菜",
   "block.candlelight.wild_tomatoes": "野生番茄",
   "candlelight.advancement.beef_wellington": "公爵最愛的菜品",
@@ -158,11 +158,11 @@
   "candlelight.advancement.cook_everything": "烹飪燭光晚宴全部菜品",
   "candlelight.advancement.cook_everything.desc": "主廚",
   "candlelight.advancement.cook_everything_pan": "平底鍋大師",
-  "candlelight.advancement.cook_everything_pan.desc": "用平底鍋烹飪燭光晚宴可制作的全部菜品",
+  "candlelight.advancement.cook_everything_pan.desc": "用平底鍋烹飪燭光晚宴可製作的全部菜品",
   "candlelight.advancement.cook_everything_pot": "煮鍋大師",
-  "candlelight.advancement.cook_everything_pot.desc": "用煮鍋烹飪燭光晚宴可制作的全部菜品",
+  "candlelight.advancement.cook_everything_pot.desc": "用煮鍋烹飪燭光晚宴可製作的全部菜品",
   "candlelight.advancement.cook_everything_vegetable": "蔬菜大師",
-  "candlelight.advancement.cook_everything_vegetable.desc": "烹飪燭光晚宴可制作的全部生食菜品",
+  "candlelight.advancement.cook_everything_vegetable.desc": "烹飪燭光晚宴可製作的全部生食菜品",
   "candlelight.advancement.cooking_pan": "平底鍋之路",
   "candlelight.advancement.cooking_pan.desc": "合成並放置平底鍋",
   "candlelight.advancement.cooking_pot": "煮鍋之路",
@@ -188,7 +188,7 @@
   "candlelight.advancement.table_sign": "裝飾之路",
   "candlelight.advancement.table_sign.desc": "合成並放置桌標",
   "candlelight.advancement.tomato_mozzarella_salad": "Miss Lilitu最愛的菜品",
-  "candlelight.advancement.tomato_mozzarella_salad.desc": "烹飪並放置番茄幹酪沙拉",
+  "candlelight.advancement.tomato_mozzarella_salad.desc": "烹飪並放置番茄乾酪沙拉",
   "candlelight.advancement.typewriter": "還需要手寫嗎？",
   "candlelight.advancement.typewriter.desc": "合成並放置打字機",
   "candlelight.advancement.use_pan_on_tool_rack": "在廚具架上放置平底鍋",
@@ -221,13 +221,13 @@
   "item.candlelight.chefs_jacket": "廚師長夾克",
   "item.candlelight.chefs_pants": "廚師長褲子",
   "item.candlelight.chicken": "蔬菜雞肉",
-  "item.candlelight.chicken_alfredo": "雞肉白醬意面",
+  "item.candlelight.chicken_alfredo": "雞肉白醬意麵",
   "item.candlelight.chicken_teriyaki": "照燒雞肉",
   "item.candlelight.chocolate": "巧克力",
   "item.candlelight.cooked_beef": "烹牛肉",
   "item.candlelight.cooking_hat": "烹飪帽",
   "item.candlelight.cristelknight.press_shift": "- CristelKnight",
-  "item.candlelight.dough": "面團",
+  "item.candlelight.dough": "麵團",
   "item.candlelight.fricasse": "白汁肉塊馬鈴薯餅",
   "block.candlelight.glass": "玻璃杯",
   "item.candlelight.gold_ring": "金戒指",
@@ -249,17 +249,17 @@
   "item.candlelight.lilitu.press_shift": "- Miss Lilitu",
   "item.candlelight.love_letter": "情書",
   "item.candlelight.love_letter_open": "拆封的情書",
-  "item.candlelight.mozzarella": "馬蘇里拉幹酪",
+  "item.candlelight.mozzarella": "馬蘇里拉乾酪",
   "item.candlelight.mushroom_soup": "蘑菇湯",
   "item.candlelight.napkin": "餐巾",
   "block.candlelight.note_paper": "信箋",
   "item.candlelight.note_paper_writeable": "可書寫的信箋",
   "item.candlelight.note_paper_written": "寫好的信箋",
   "item.candlelight.pancake": "薄餅",
-  "item.candlelight.pasta": "番茄醬汁意面",
-  "item.candlelight.pasta_bolognese": "博洛尼亞肉醬意面",
-  "item.candlelight.pasta_lettuce": "生菜意面",
-  "item.candlelight.pasta_raw": "生意面",
+  "item.candlelight.pasta": "番茄醬汁意麵",
+  "item.candlelight.pasta_bolognese": "博洛尼亞肉醬意麵",
+  "item.candlelight.pasta_lettuce": "生菜意麵",
+  "item.candlelight.pasta_raw": "生意麵",
   "item.candlelight.pizza_slice": "披薩切片",
   "item.candlelight.pork_rib": "烹豬肋排",
   "item.candlelight.press_shift.tooltip": "按住§6§lShift§r了解更多",
@@ -272,7 +272,7 @@
   "item.candlelight.satisfyu.press_shift": "- Satisfy",
   "item.candlelight.table_set.tooltip": "餐具套件的一部分",
   "item.candlelight.thankyou1.press_shift": "這些畫不僅描繪了Alex和Steve，也包括“Let's Do”系列模組的貢獻者們。",
-  "item.candlelight.thankyou2.press_shift": "感謝所有為“Let's Do”系列模組的制作做出過貢獻的人們：",
+  "item.candlelight.thankyou2.press_shift": "感謝所有為“Let's Do”系列模組的製作做出過貢獻的人們：",
   "item.candlelight.tomato": "番茄",
   "item.candlelight.tomato_seeds": "番茄種子",
   "item.candlelight.tomato_soup": "番茄湯",
