--- a/cataclysm/lang/zh_tw.json
+++ b/cataclysm/lang/zh_tw.json
@@ -16,9 +16,9 @@
   "item.cataclysm.ignitium_chestplate.desc": "可以與鞘翅合成",
   "item.cataclysm.ignitium_leggings.desc": "用火焰灼燒攻擊者",
   "item.cataclysm.ignitium_boots.desc": "熔岩行者",
-  "item.cataclysm.bulwark_of_the_flame.desc": "潛行狀態下，手持此盾右鍵以向前沖鋒，對前方實體造成傷害。",
+  "item.cataclysm.bulwark_of_the_flame.desc": "潛行狀態下，手持此盾右鍵以向前衝鋒，對前方實體造成傷害。",
   "item.cataclysm.bulwark_of_the_flame2.desc": "如果目標受擊後撞到了牆，那麽它會受到更多傷害並被暫時眩暈。",
-  "item.cataclysm.incinerator.desc": "長按滑鼠右鍵3秒以充能，而後若松開右鍵，",
+  "item.cataclysm.incinerator.desc": "長按滑鼠右鍵3秒以充能，而後若鬆開右鍵，",
   "item.cataclysm.incinerator2.desc": "在你的面朝方向召喚火焰轟擊。",
   "item.cataclysm.incinerator3.desc": "警告：生物死亡時的掉落物可能會在火焰轟擊的爆炸中消失。",
   "item.cataclysm.void_forge.desc": "在主手時，你可以右鍵方塊以召喚一片扇形虛空符文。",
@@ -27,7 +27,7 @@
   "item.cataclysm.wither_assault_shoulder_weapon.desc": "右鍵發射凋零飛彈。",
   "item.cataclysm.wither_assault_shoulder_weapon.desc2": "潛行時右鍵以發射凋零榴彈。",
   "item.cataclysm.gauntlet_of_bulwark.desc": "蓄力一秒後，推開周圍的實體並給予它們熾熱烙印藥水效果。",
-  "item.cataclysm.gauntlet_of_bulwark.desc2": "如果停止右鍵，你將向前沖鋒並對你前方的實體們造成傷害。",
+  "item.cataclysm.gauntlet_of_bulwark.desc2": "如果停止右鍵，你將向前衝鋒並對你前方的實體們造成傷害。",
   "item.cataclysm.ignitium_upgrade.desc": "騰炎升級",
   "item.cataclysm.ignitium_upgrade.applies_to.desc": "獄髓裝備",
   "item.cataclysm.ignitium_upgrade.ingredients.desc": "騰炎錠",
@@ -63,8 +63,8 @@
   "item.cataclysm.monstrous_horn": "惡獸犄角",
   "item.cataclysm.void_jaw": "虛空之顎",
   "item.cataclysm.void_core": "虛空核心",
-  "item.cataclysm.burning_ashes": "熾燃余燼",
-  "item.cataclysm.dying_ember": "將熄余燼",
+  "item.cataclysm.burning_ashes": "熾燃餘燼",
+  "item.cataclysm.dying_ember": "將熄餘燼",
   "item.cataclysm.music_disc_netherite_monstrosity": "音樂唱片",
   "item.cataclysm.music_disc_ender_guardian": "音樂唱片",
   "item.cataclysm.music_disc_ignis": "音樂唱片",
@@ -161,11 +161,11 @@
   "block.cataclysm.obsidian_brick_slab": "黑曜石磚半磚",
   "block.cataclysm.obsidian_brick_stairs": "黑曜石磚樓梯",
   "block.cataclysm.obsidian_brick_wall": "黑曜石磚牆",
-  "block.cataclysm.chorus_stem": "紫頌莖",
-  "block.cataclysm.chorus_planks": "紫頌木板",
-  "block.cataclysm.chorus_slab": "紫頌半磚",
-  "block.cataclysm.chorus_stairs": "紫頌樓梯",
-  "block.cataclysm.chorus_fence": "紫頌柵欄",
+  "block.cataclysm.chorus_stem": "歌萊莖",
+  "block.cataclysm.chorus_planks": "歌萊木板",
+  "block.cataclysm.chorus_slab": "歌萊半磚",
+  "block.cataclysm.chorus_stairs": "歌萊樓梯",
+  "block.cataclysm.chorus_fence": "歌萊柵欄",
   "block.cataclysm.purpur_wall": "紫珀牆",
   "block.cataclysm.quartz_brick_wall": "石英磚牆",
   "block.cataclysm.stone_pillar": "石柱",
@@ -185,7 +185,7 @@
   "block.cataclysm.altar_of_void": "虛空祭壇",
   "block.cataclysm.altar_of_amethyst": "紫水晶祭壇",
   "block.cataclysm.altar_of_abyss": "深淵祭壇",
-  "block.cataclysm.emp": "電磁脈沖發射器",
+  "block.cataclysm.emp": "電磁脈衝發射器",
   "block.cataclysm.mechanical_fusion_anvil": "機械融合砧",
   "block.cataclysm.abyssal_egg": "深淵之卵",
   "block.cataclysm.blackstone_pillar": "黑石柱",
@@ -209,12 +209,12 @@
   "entity.cataclysm.void_scatter_arrow": "虛空散射箭",
   "entity.cataclysm.void_shard": "虛空碎片",
   "entity.cataclysm.ignis": "焰魔",
-  "entity.cataclysm.ignis.defeat_message": "下界亡靈已經蘇醒",
+  "entity.cataclysm.ignis.defeat_message": "地獄的亡靈已經蘇醒",
   "entity.cataclysm.cm_falling_block": "下落的方塊",
   "entity.cataclysm.ignis_abyss_fireball": "焰魔深淵火球",
   "entity.cataclysm.ignis_fireball": "焰魔火球",
   "entity.cataclysm.flame_strike": "烈焰轟擊",
-  "entity.cataclysm.wither_smoke_effect": "雕零煙霧",
+  "entity.cataclysm.wither_smoke_effect": "凋零煙霧",
   "entity.cataclysm.ignited_revenant": "燃魂",
   "entity.cataclysm.ashen_breath": "灰燼之息",
   "entity.cataclysm.ignited_berserker": "熾燃狂魂",
@@ -230,10 +230,10 @@
   "entity.cataclysm.the_baby_leviathan": "幼年利維坦",
   "entity.cataclysm.the_leviathan.defeat_message": "深淵正凝視著你",
   "entity.cataclysm.deepling": "淵靈",
-  "entity.cataclysm.abyss_blast": "深淵沖擊波",
-  "entity.cataclysm.mini_abyss_blast": "小型深淵沖擊波",
-  "entity.cataclysm.porta_abyss_blast": "深淵沖擊波",
-  "entity.cataclysm.abyss_blast_portal": "深淵沖擊波傳送門",
+  "entity.cataclysm.abyss_blast": "深淵衝擊波",
+  "entity.cataclysm.mini_abyss_blast": "小型深淵衝擊波",
+  "entity.cataclysm.porta_abyss_blast": "深淵衝擊波",
+  "entity.cataclysm.abyss_blast_portal": "深淵衝擊波傳送門",
   "entity.cataclysm.abyss_mine": "深淵水雷",
   "entity.cataclysm.abyss_portal": "深淵傳送門",
   "entity.cataclysm.coral_spear": "珊瑚長矛",
@@ -247,7 +247,7 @@
   "entity.cataclysm.lionfish": "蓑鲉",
   "entity.cataclysm.dimensional_rift": "維度裂隙",
   "entity.cataclysm.abyss_orb": "深淵靈珠",
-  "entity.cataclysm.portal_abyss_blast": "傳送門深淵沖擊波",
+  "entity.cataclysm.portal_abyss_blast": "傳送門深淵衝擊波",
   "entity.cataclysm.lionfish_spike": "蓑鲉尖刺",
   "entity.cataclysm.tidal_tentacle": "潮汐觸手",
   "entity.cataclysm.sandstorm": "沙塵暴",
@@ -315,9 +315,9 @@
   "harbinger_laser.sub": "先驅者：發射激光",
   "harbinger_mode_change.sub": "先驅者：改變模式",
   "harbinger_prepare.sub": "先驅者：準備攻擊",
-  "harbinger_charge.sub": "先驅者：沖撞",
-  "harbinger_charge_prepare.sub": "先驅者：準備沖撞",
-  "emp_activated.sub": "電磁脈沖：已激活",
+  "harbinger_charge.sub": "先驅者：衝撞",
+  "harbinger_charge_prepare.sub": "先驅者：準備衝撞",
+  "emp_activated.sub": "電磁脈衝：已激活",
   "harbinger_deathlaser_prepare.sub": "先驅者：準備死亡激光束",
   "death_laser.sub": "死亡激光束：發射",
   "harbinger_stun.sub": "先驅者：被眩暈",
@@ -341,9 +341,9 @@
   "black_hole_loop.sub": "維度裂隙：呼呼",
   "black_hole_closing.sub": "維度裂隙：消失",
   "abyss_blast.sub": "利維坦：深淵充能",
-  "abyss_blast_shoot.sub": "深淵沖擊波：發射",
+  "abyss_blast_shoot.sub": "深淵衝擊波：發射",
   "leviathan_roar.sub": "利維坦：咆哮",
-  "portal_abyss_blast.sub": "深淵沖擊波：自傳送門迸出",
+  "portal_abyss_blast.sub": "深淵衝擊波：自傳送門迸出",
   "leviathan_tentacle_strike.sub": "利維坦：觸手攻擊",
   "leviathan_defeat.sub": "利維坦：死亡",
   "leviathan_bite.sub": "利維坦：撕咬",
@@ -406,11 +406,11 @@
   "advancements.cataclysm.cursed_pyramid.description": "找到詛咒金字塔",
   "advancements.cataclysm.kill_ender_golem.title": "色調變更",
   "advancements.cataclysm.kill_ender_golem.description": "殺死終界傀儡",
-  "advancements.cataclysm.kill_ender_guardian.title": "那是潛影貝嗎？",
+  "advancements.cataclysm.kill_ender_guardian.title": "那是界伏蚌嗎？",
   "advancements.cataclysm.kill_ender_guardian.description": "擊敗終界守衛",
   "advancements.cataclysm.kill_revenant.title": "不完美之物",
   "advancements.cataclysm.kill_revenant.description": "殺死燃魂",
-  "advancements.cataclysm.kill_monstrosity.title": "損壞的下界戰爭機器",
+  "advancements.cataclysm.kill_monstrosity.title": "損壞的地獄戰爭機器",
   "advancements.cataclysm.kill_monstrosity.description": "殺死獄髓巨獸",
   "advancements.cataclysm.kill_ignis.title": "燃盡之焰",
   "advancements.cataclysm.kill_ignis.description": "召喚並擊敗焰魔",
