--- a/cazfps_the_dead_sea/lang/zh_tw.json
+++ b/cazfps_the_dead_sea/lang/zh_tw.json
@@ -29,7 +29,7 @@
   "block.cazfps_the_dead_sea.dsbslab": "死之石磚半磚",
   "block.cazfps_the_dead_sea.concrete": "混凝土",
   "block.cazfps_the_dead_sea.steelfence": "鋼柵欄",
-  "block.cazfps_the_dead_sea.dtpw": "死之木板樹牆",
+  "block.cazfps_the_dead_sea.dtpw": "死之樹牆",
   "block.cazfps_the_dead_sea.hangingbody": "吊屍",
   "block.cazfps_the_dead_sea.deadstonebrickwall": "死之石磚牆",
   "block.cazfps_the_dead_sea.deadsandlayer": "死之沙層",
@@ -65,12 +65,12 @@
   "key.mcreator.tdsk": "死亡之海 菜單",
   "block.cazfps_the_dead_sea.deadgrass": "死之植",
   "biome.cazfps_the_dead_sea.streetofashs": "灰燼之街",
-  "block.cazfps_the_dead_sea.deadtreeplank": "死之樹木板",
+  "block.cazfps_the_dead_sea.deadtreeplank": "死之樹木材",
   "entity.cazfps_the_dead_sea.deadwitch": "死亡女巫",
   "block.cazfps_the_dead_sea.deadsand": "死之沙",
   "block.cazfps_the_dead_sea.steelslab": "鋼半磚",
   "block.cazfps_the_dead_sea.gcloth": "綠布方塊",
-  "block.cazfps_the_dead_sea.dps": "死之樹木板樓梯",
+  "block.cazfps_the_dead_sea.dps": "死之樹樓梯",
   "item.cazfps_the_dead_sea.deadclown_spawn_egg": "死亡小醜生怪蛋",
   "block.cazfps_the_dead_sea.handplant": "死之草",
   "item.cazfps_the_dead_sea.oldman": "可怖老人生怪蛋",
@@ -108,7 +108,7 @@
   "block.cazfps_the_dead_sea.deadtreewall": "死之樹牆",
   "block.cazfps_the_dead_sea.deadtreestairs": "死之樹樓梯",
   "item.cazfps_the_dead_sea.sirenheadcall": "警笛頭召喚器",
-  "block.cazfps_the_dead_sea.dtf": "死之樹木板柵欄",
+  "block.cazfps_the_dead_sea.dtf": "死之樹柵欄",
   "entity.cazfps_the_dead_sea.the_screamer": "尖叫者",
   "item.cazfps_the_dead_sea.sirenhead": "警笛頭生怪蛋",
   "subtitles.small_clown_death": "小型小醜：死亡",
