--- a/cazfps_the_dead_sea/lang/zh_tw.json
+++ b/cazfps_the_dead_sea/lang/zh_tw.json
@@ -36,29 +36,29 @@
   "block.cazfps_the_dead_sea.deadstonebrickstairs": "死之石磚樓梯",
   "block.cazfps_the_dead_sea.back": "回到主世界",
   "advancements.soa.descr": "歡迎！！",
-  "entity.cazfps_the_dead_sea.smallclown": "小型小醜",
+  "entity.cazfps_the_dead_sea.smallclown": "小型小丑",
   "item.cazfps_the_dead_sea.gun": "槍",
   "block.cazfps_the_dead_sea.steelblock": "鋼塊",
-  "advancements.welcome_to_hah_aland.descr": "小醜們",
+  "advancements.welcome_to_hah_aland.descr": "小丑們",
   "advancements.tdg.descr": "歡迎！！",
-  "subtitles.small_clown_hurt": "小型小醜：受傷",
+  "subtitles.small_clown_hurt": "小型小丑：受傷",
   "entity.cazfps_the_dead_sea.deadskeleton": "死亡骷髏",
   "block.cazfps_the_dead_sea.slabbbbb": "死之沙半磚",
   "itemGroup.tabthedeadsea": "死亡之海",
   "item.cazfps_the_dead_sea.deadwalker_spawn_egg": "死亡遊蕩者生怪蛋",
   "item.cazfps_the_dead_sea.bigfoot": "大腳怪生怪蛋",
-  "item.cazfps_the_dead_sea.mikeyclown_spawn_egg": "米奇小醜生怪蛋",
+  "item.cazfps_the_dead_sea.mikeyclown_spawn_egg": "米奇小丑生怪蛋",
   "item.cazfps_the_dead_sea.forestghost_spawn_egg": "死森幽魂生怪蛋",
   "entity.cazfps_the_dead_sea.bigfoot": "大腳怪",
   "biome.cazfps_the_dead_sea.theforgottenforest": "遺忘之森",
   "block.cazfps_the_dead_sea.deadgrassblock": "死之草方塊",
   "item.cazfps_the_dead_sea.deadcorps_spawn_egg": "死屍生怪蛋",
   "block.cazfps_the_dead_sea.bcloth": "藍布方塊",
-  "advancements.deadclownw.title": "小醜殺手",
+  "advancements.deadclownw.title": "小丑殺手",
   "block.cazfps_the_dead_sea.steeltrapdoor": "鋼活板門",
   "item.cazfps_the_dead_sea.forestghost": "死森幽魂生怪蛋",
   "block.cazfps_the_dead_sea.concretwall": "混凝土牆",
-  "item.cazfps_the_dead_sea.deadclown": "死亡小醜生怪蛋",
+  "item.cazfps_the_dead_sea.deadclown": "死亡小丑生怪蛋",
   "advancements.tds.title": "死亡之海",
   "block.cazfps_the_dead_sea.deaddirt": "死之土",
   "item.cazfps_the_dead_sea.bigfoot_spawn_egg": "大腳怪生怪蛋",
@@ -71,19 +71,19 @@
   "block.cazfps_the_dead_sea.steelslab": "鋼半磚",
   "block.cazfps_the_dead_sea.gcloth": "綠布方塊",
   "block.cazfps_the_dead_sea.dps": "死之樹樓梯",
-  "item.cazfps_the_dead_sea.deadclown_spawn_egg": "死亡小醜生怪蛋",
+  "item.cazfps_the_dead_sea.deadclown_spawn_egg": "死亡小丑生怪蛋",
   "block.cazfps_the_dead_sea.handplant": "死之草",
   "item.cazfps_the_dead_sea.oldman": "可怖老人生怪蛋",
   "entity.cazfps_the_dead_sea.sirenhead": "警笛頭",
   "block.cazfps_the_dead_sea.clothblock": "紅布方塊",
   "subtitles.switch_light": "開關燈",
-  "item.cazfps_the_dead_sea.smallclown_spawn_egg": "小型小醜生怪蛋",
+  "item.cazfps_the_dead_sea.smallclown_spawn_egg": "小型小丑生怪蛋",
   "block.cazfps_the_dead_sea.deadstonebrick": "死之石磚",
-  "entity.cazfps_the_dead_sea.mikeyclown": "米奇小醜",
+  "entity.cazfps_the_dead_sea.mikeyclown": "米奇小丑",
   "entity.cazfps_the_dead_sea.oldman": "可怖老人",
   "block.cazfps_the_dead_sea.cart": "車",
   "block.cazfps_the_dead_sea.deadsandlayerbigg": "厚層死之沙",
-  "entity.cazfps_the_dead_sea.deadclown": "死亡小醜",
+  "entity.cazfps_the_dead_sea.deadclown": "死亡小丑",
   "block.cazfps_the_dead_sea.stair": "石路樓梯",
   "block.cazfps_the_dead_sea.deadstone": "死之石",
   "block.cazfps_the_dead_sea.concreteslab": "混凝土半磚",
@@ -111,7 +111,7 @@
   "block.cazfps_the_dead_sea.dtf": "死之樹柵欄",
   "entity.cazfps_the_dead_sea.the_screamer": "尖叫者",
   "item.cazfps_the_dead_sea.sirenhead": "警笛頭生怪蛋",
-  "subtitles.small_clown_death": "小型小醜：死亡",
+  "subtitles.small_clown_death": "小型小丑：死亡",
   "item.cazfps_the_dead_sea.the_screamer_spawn_egg": "尖叫者生怪蛋",
   "block.cazfps_the_dead_sea.ycloth": "黃布方塊",
   "item.cazfps_the_dead_sea.deadwalker": "死亡遊蕩者生怪蛋",
