--- a/ccam/lang/zh_tw.json
+++ b/ccam/lang/zh_tw.json
@@ -5,7 +5,7 @@
   "item.ccam.colt_helmet": "蒸汽龐克護目鏡",
   "item.ccam.colt_chestplate": "蒸汽龐克外套",
   "item.ccam.colt_leggings": "蒸汽龐克外套下擺",
-  "item.ccam.tulip_hat": "郁金香帽",
+  "item.ccam.tulip_hat": "鬱金香帽",
   "item.ccam.flower_crown": "花冠",
   "item.ccam.top_hat": "高頂禮帽",
   "item.ccam.cowboy_hat": "牛仔帽",
