--- a/ceramics/lang/zh_tw.json
+++ b/ceramics/lang/zh_tw.json
@@ -85,6 +85,6 @@
   "item.ceramics.clay_leggings": "黏土陶板護腿",
   "item.ceramics.clay_boots": "黏土陶板靴子",
   "container.ceramics.kiln": "窯",
-  "gui.recipebook.toggleRecipes.ceramics.kiln": "顯示可燒制的",
+  "gui.recipebook.toggleRecipes.ceramics.kiln": "顯示可燒製的",
   "gui.jei.category.ceramics.kiln": "窯"
 }
