--- a/cgm/lang/zh_tw.json
+++ b/cgm/lang/zh_tw.json
@@ -73,7 +73,7 @@
   "cgm.crosshair.t": "T形",
   "cgm.crosshair.tech": "科技",
   "gui.cgm.workbench.assemble": "組裝",
-  "gui.cgm.workbench.show_remaining": "顯示剩余",
+  "gui.cgm.workbench.show_remaining": "顯示剩餘",
   "gui.cgm.workbench.tab.weapons": "武器",
   "gui.cgm.workbench.tab.attachments": "配件",
   "gui.cgm.workbench.tab.ammo": "彈藥",
@@ -100,9 +100,9 @@
   "enchantment.cgm.lightweight.desc": "減輕武器重量，提高瞄準速度",
   "enchantment.cgm.collateral.desc": "使子彈能夠穿過多個實體",
   "enchantment.cgm.over_capacity.desc": "增加彈匣容量",
-  "enchantment.cgm.reclaimed.desc": "有幾率在開火時不會消耗子彈",
+  "enchantment.cgm.reclaimed.desc": "有機率在開火時不會消耗子彈",
   "enchantment.cgm.accelerator.desc": "提高子彈飛行速度，使其造成更大的傷害",
-  "enchantment.cgm.puncturing.desc": "子彈有幾率造成暴擊傷害",
+  "enchantment.cgm.puncturing.desc": "子彈有機率造成暴擊傷害",
   "enchantment.cgm.fire_starter.desc": "使子彈能夠引燃方塊和實體",
   "perk.cgm.title": "額外：",
   "perk.cgm.entry.positive": "+ %s",
@@ -122,14 +122,14 @@
   "perk.cgm.projectile_spread.negative": "增加子彈擴散",
   "perk.cgm.projectile_life.positive": "增大傷害範圍",
   "perk.cgm.projectile_life.negative": "縮小傷害範圍",
-  "perk.cgm.recoil.positive": "降低後坐力",
-  "perk.cgm.recoil.negative": "提高後坐力",
+  "perk.cgm.recoil.positive": "降低後座力",
+  "perk.cgm.recoil.negative": "提高後座力",
   "perk.cgm.ads_speed.positive": "提高瞄準速度",
   "perk.cgm.ads_speed.negative": "降低瞄準速度",
   "perk.cgm.rate.positive": "提高射速",
   "perk.cgm.rate.negative": "降低射速",
   "gui.cgm.assemble": "組裝",
-  "gui.cgm.show_remaining": "顯示剩余",
+  "gui.cgm.show_remaining": "顯示剩餘",
   "button.categories.cgm": "MrCrayfish的槍械模組",
   "cgm.button.shoot": "武器開火",
   "cgm.button.aim": "開鏡瞄準",
