--- a/chainmailed/lang/zh_tw.json
+++ b/chainmailed/lang/zh_tw.json
@@ -3,5 +3,5 @@
   "advancements.story.chainmail_set.title": "鎖鏈內襯！",
   "advancements.story.chainmail_set.description": "獲得鎖鏈盔甲。",
   "sounds.chainmailed.chainmail_block": "鎖鏈盔甲：格擋",
-  "attribute.impact_resistance": "沖擊抗性"
+  "attribute.impact_resistance": "衝擊抗性"
 }
