--- a/chalk/lang/zh_tw.json
+++ b/chalk/lang/zh_tw.json
@@ -37,7 +37,7 @@
   "item.chalk.chalk_box.tooltip.open": "<右鍵以打開>",
   "container.chalk.chalk_box": "粉筆盒",
   "chalk.subtitles.chalk_broken": "粉筆：磨盡",
-  "chalk.subtitles.mark_drawn": "粉筆：繪制",
+  "chalk.subtitles.mark_drawn": "粉筆：繪製",
   "chalk.subtitles.chalk_box_changed": "粉筆盒：沙沙作響",
   "chalk.subtitles.chalk_box_opens": "粉筆盒：打開",
   "chalk.subtitles.chalk_box_closes": "粉筆盒：關閉",
@@ -51,7 +51,7 @@
   "gui.chalk.symbol.heart": "心",
   "gui.chalk.symbol.skull": "骷髏",
   "gui.chalk.symbol.pickaxe": "鎬",
-  "gui.chalk.no_symbols_unlocked": "你還不知道如何繪制特殊圖案",
+  "gui.chalk.no_symbols_unlocked": "你還不知道如何繪製特殊圖案",
   "gui.chalk.unlocked_symbol_message": "你學會了如何用粉筆畫出一個%s",
   "advancement.chalk.get_skeleton_skull": "受縛於骨",
   "advancement.chalk.get_skeleton_skull.description": "獲得一個骷髏頭顱",
