--- a/charcoal_pit/lang/zh_tw.json
+++ b/charcoal_pit/lang/zh_tw.json
@@ -65,7 +65,7 @@
   "block.charcoal_pit.banana_sapling": "香蕉樹苗",
   "block.charcoal_pit.coconut_leaves": "椰樹樹葉",
   "block.charcoal_pit.coconut_sapling": "椰樹樹苗",
-  "item.charcoal_pit.straw": "幹草",
+  "item.charcoal_pit.straw": "乾草",
   "item.charcoal_pit.ash": "灰燼",
   "item.charcoal_pit.coke": "焦煤",
   "item.charcoal_pit.aeternalis_fuel": "永恆燃料",
@@ -78,17 +78,17 @@
   "item.charcoal_pit.cracked_pot": "破裂的陶罐",
   "item.charcoal_pit.bloom_nickel_fail": "失敗的鎳方坯",
   "item.charcoal_pit.bloom_nickel_cool": "冷卻的鎳方坯",
-  "item.charcoal_pit.unfired_brick": "未燒制的黏土磚",
-  "item.charcoal_pit.unfired_sandy_brick": "未燒制的砂磚",
+  "item.charcoal_pit.unfired_brick": "未燒製的黏土磚",
+  "item.charcoal_pit.unfired_sandy_brick": "未燒製的砂磚",
   "item.charcoal_pit.sandy_brick_item": "砂磚",
-  "item.charcoal_pit.nether_brick_item": "未燒制的地獄磚",
+  "item.charcoal_pit.nether_brick_item": "未燒製的地獄磚",
   "item.charcoal_pit.vinegar_bucket": "醋桶",
   "item.charcoal_pit.vinegar_bottle": "醋瓶",
   "item.charcoal_pit.cheese": "奶酪",
   "item.charcoal_pit.alcohol_bottle": "瓶裝酒",
   "item.charcoal_pit.alcohol_bottle.effect.cider": "瓶裝蘋果酒",
   "item.charcoal_pit.alcohol_bottle.effect.golden_cider": "瓶裝金蘋果酒",
-  "item.charcoal_pit.alcohol_bottle.effect.chorus_cider": "瓶裝紫頌果酒",
+  "item.charcoal_pit.alcohol_bottle.effect.chorus_cider": "瓶裝歌來果酒",
   "item.charcoal_pit.alcohol_bottle.effect.vodka": "瓶裝伏特加",
   "item.charcoal_pit.alcohol_bottle.effect.beetroot_beer": "瓶裝甜菜根啤酒",
   "item.charcoal_pit.alcohol_bottle.effect.beer": "瓶裝啤酒",
@@ -102,8 +102,8 @@
   "item.charcoal_pit.kebabs": "烤羊肉串",
   "item.charcoal_pit.leek": "韭菜",
   "item.charcoal_pit.farfetch_stew": "法式燉肉",
-  "item.charcoal_pit.rabbit_stew": "兔肉煲",
-  "item.charcoal_pit.mooshroom_stew": "蘑菇煲",
+  "item.charcoal_pit.rabbit_stew": "兔肉湯",
+  "item.charcoal_pit.mooshroom_stew": "蘑菇湯",
   "item.charcoal_pit.beet_stew": "甜菜湯",
   "item.charcoal_pit.calamari": "生魷魚",
   "item.charcoal_pit.cooked_calamari": "熟魷魚",
@@ -123,12 +123,12 @@
   "item.charcoal_pit.coconut": "椰子",
   "item.charcoal_pit.turtle_raw": "生烏龜",
   "item.charcoal_pit.turtle_cooked": "熟烏龜",
-  "item.charcoal_pit.turtle_stew": "烏龜煲",
+  "item.charcoal_pit.turtle_stew": "海龜湯",
   "item.charcoal_pit.choco_powder": "巧克力粉",
   "item.charcoal_pit.chocolate": "巧克力",
   "item.minecraft.potion.effect.cider": "蘋果酒藥水",
   "item.minecraft.potion.effect.golden_cider": "金蘋果酒藥水",
-  "item.minecraft.potion.effect.chorus_cider": "紫頌果酒藥水",
+  "item.minecraft.potion.effect.chorus_cider": "歌來果酒藥水",
   "item.minecraft.potion.effect.vodka": "伏特加藥水",
   "item.minecraft.potion.effect.beetroot_beer": "甜菜根酒藥水",
   "item.minecraft.potion.effect.beer": "啤酒藥水",
@@ -140,7 +140,7 @@
   "item.minecraft.potion.effect.spider_spirit": "蜘蛛精華藥水",
   "item.minecraft.splash_potion.effect.cider": "噴濺型蘋果酒藥水",
   "item.minecraft.splash_potion.effect.golden_cider": "噴濺型金蘋果酒藥水",
-  "item.minecraft.splash_potion.effect.chorus_cider": "噴濺型紫頌果酒藥水",
+  "item.minecraft.splash_potion.effect.chorus_cider": "噴濺型歌來果酒藥水",
   "item.minecraft.splash_potion.effect.vodka": "噴濺型伏特加藥水",
   "item.minecraft.splash_potion.effect.beetroot_beer": "噴濺型甜菜根酒藥水",
   "item.minecraft.splash_potion.effect.beer": "噴濺型啤酒藥水",
@@ -152,7 +152,7 @@
   "item.minecraft.splash_potion.effect.spider_spirit": "噴濺型蜘蛛精華藥水",
   "item.minecraft.lingering_potion.effect.cider": "滯留型蘋果酒藥水",
   "item.minecraft.lingering_potion.effect.golden_cider": "滯留型金蘋果酒藥水",
-  "item.minecraft.lingering_potion.effect.chorus_cider": "滯留型紫頌果酒藥水",
+  "item.minecraft.lingering_potion.effect.chorus_cider": "滯留型歌來果酒藥水",
   "item.minecraft.lingering_potion.effect.vodka": "滯留型伏特加藥水",
   "item.minecraft.lingering_potion.effect.beetroot_beer": "滯留型甜菜根酒藥水",
   "item.minecraft.lingering_potion.effect.beer": "滯留型啤酒藥水",
@@ -171,13 +171,13 @@
   "effect.charcoal_pit.drunk": "醉酒",
   "effect.charcoal_pit.roulette": "藥水轉盤",
   "effect.charcoal_pit.poison_resistance": "劇毒抗性",
-  "effect.charcoal_pit.wither_resistance": "雕零抗性",
+  "effect.charcoal_pit.wither_resistance": "凋零抗性",
   "advancements.charcoal_pit.root.title": "木炭坑",
   "advancements.charcoal_pit.root.description": "嗨",
   "advancements.charcoal_pit.fire_starter.title": "已知用火！",
-  "advancements.charcoal_pit.fire_starter.description": "在有打火石之前制作一個起火器來生火",
+  "advancements.charcoal_pit.fire_starter.description": "在有打火石之前製作一個起火器來生火",
   "advancements.charcoal_pit.log_pile.title": "方塊組成的方塊堆？",
-  "advancements.charcoal_pit.log_pile.description": "制作一個原木堆",
+  "advancements.charcoal_pit.log_pile.description": "製作一個原木堆",
   "advancements.charcoal_pit.charcoal.title": "精煉木頭",
   "advancements.charcoal_pit.charcoal.description": "從木炭坑中獲取木炭",
   "advancements.charcoal_pit.aeternalis.title": "比Irene的還好",
@@ -185,15 +185,15 @@
   "advancements.charcoal_pit.straw.title": "鋤草大師",
   "advancements.charcoal_pit.straw.description": "用鋤頭把高草砍倒",
   "advancements.charcoal_pit.brick.title": "磚，磚，磚，磚，磚，磚，磚",
-  "advancements.charcoal_pit.brick.description": "用稻草和圓木燒制陶窯磚",
+  "advancements.charcoal_pit.brick.description": "用稻草和原木燒製陶窯磚",
   "advancements.charcoal_pit.coke.title": "焦口可樂",
   "advancements.charcoal_pit.coke.description": "用磚塊建造一個焦爐，將煤炭塊加工成焦煤",
   "advancements.charcoal_pit.clay_pot.title": "你就是哈利·波特",
-  "advancements.charcoal_pit.clay_pot.description": "將黏土制成罐用於儲存或礦石加工",
+  "advancements.charcoal_pit.clay_pot.description": "將黏土製成罐用於儲存或礦石加工",
   "advancements.charcoal_pit.ceramic_pot.title": "為了存放你的綠寶石",
   "advancements.charcoal_pit.ceramic_pot.description": "從陶窯中取出一個陶罐",
   "advancements.charcoal_pit.copper.title": "銅石並用",
-  "advancements.charcoal_pit.copper.description": "把礦石放在陶土器皿里，放在窯里燒，讓它熔化",
+  "advancements.charcoal_pit.copper.description": "把礦石放在陶土器皿里，放在窯里燒，讓它融化",
   "advancements.charcoal_pit.bloomery.title": "方坯",
   "advancements.charcoal_pit.bloomery.description": "用磚塊建造一個熟鐵吹煉爐，加上一個風口和風箱來冶煉鐵",
   "advancements.charcoal_pit.iron.title": "鐵",
@@ -201,13 +201,13 @@
   "advancements.charcoal_pit.creosote.title": "提取器",
   "advancements.charcoal_pit.creosote.description": "使用雜酚油漏斗從木炭坑和焦爐收集雜酚油",
   "advancements.charcoal_pit.barrel.title": "就像鐵桶一樣",
-  "advancements.charcoal_pit.barrel.description": "制作一個桶來儲存液體",
+  "advancements.charcoal_pit.barrel.description": "製作一個桶來儲存液體",
   "advancements.charcoal_pit.alcohol.title": "手工釀酒廠",
   "advancements.charcoal_pit.alcohol.description": "釀造12種酒精飲料中的任何一種",
   "advancements.charcoal_pit.diggy_diggy_hole.title": "Diggy Diggy Hole",
   "advancements.charcoal_pit.diggy_diggy_hole.description": "釀造矮人蜂蜜酒，矮人的長生不老藥",
   "advancements.charcoal_pit.vinegar.title": "RCOOH",
-  "advancements.charcoal_pit.vinegar.description": "將水果加入酒精中制成醋",
+  "advancements.charcoal_pit.vinegar.description": "將水果加入酒精中製成醋",
   "advancements.charcoal_pit.cheese.title": "格洛米，快看，是奶酪！",
   "advancements.charcoal_pit.cheese.description": "把醋加到奶里做成奶酪",
   "advancements.charcoal_pit.wine_conosur.title": "葡萄酒鑒賞家",
@@ -225,7 +225,7 @@
   "advancements.charcoal_pit.kebabs.title": "コノハの世界事情",
   "advancements.charcoal_pit.kebabs.description": "出自Vazkii",
   "advancements.charcoal_pit.turtle.title": "我喜歡烏龜",
-  "advancements.charcoal_pit.turtle.description": "吃烏龜煲",
+  "advancements.charcoal_pit.turtle.description": "吃海龜湯",
   "advancements.charcoal_pit.banana.title": "香↑蕉↓！",
   "advancements.charcoal_pit.banana.description": "吃香蕉",
   "advancements.charcoal_pit.dragon.title": "龍的種植者",
@@ -240,8 +240,8 @@
   "charcoal_pit.jei.charcoal": "炭坑/焦爐",
   "charcoal_pit.jei.barrel": "桶",
   "charcoal_pit.instruction.place_kiln": "拿著原料按住Shift右鍵，可在地上放置窯/熟鐵吹煉爐",
-  "charcoal_pit.instruction.coke_oven": "時運附魔能提高效率。默認80%，最高可達95%",
-  "charcoal_pit.instruction.charcoal_pit": "時運附魔能提高效率。默認50%，最多80%",
+  "charcoal_pit.instruction.coke_oven": "幸運附魔能提高效率。默認80%，最高可達95%",
+  "charcoal_pit.instruction.charcoal_pit": "幸運附魔能提高效率。默認50%，最多80%",
   "charcoal_pit.instruction.straw": "用鋤頭割高草可以獲得幹草",
   "charcoal_pit.instruction.build_pit": "在地上放置原料，用有效的方塊覆蓋，在裸露的一面點火，然後迅速覆蓋它，直到煙不再出現"
 }
