--- a/charm/lang/zh_tw.json
+++ b/charm/lang/zh_tw.json
@@ -6,13 +6,13 @@
   "block.charm.acacia_crate": "相思木板條箱",
   "block.charm.acacia_ladder": "相思木梯子",
   "block.charm.acacia_trapped_chest": "相思木陷阱箱",
-  "block.charm.birch_barrel": "白樺木桶",
-  "block.charm.birch_bookcase": "白樺木書櫃",
-  "block.charm.birch_bookshelf": "白樺木書架",
-  "block.charm.birch_chest": "白樺木箱子",
-  "block.charm.birch_crate": "白樺木板條箱",
-  "block.charm.birch_ladder": "白樺木梯子",
-  "block.charm.birch_trapped_chest": "白樺木陷阱箱",
+  "block.charm.birch_barrel": "樺木桶",
+  "block.charm.birch_bookcase": "樺木書櫃",
+  "block.charm.birch_bookshelf": "樺木書架",
+  "block.charm.birch_chest": "樺木箱子",
+  "block.charm.birch_crate": "樺木板條箱",
+  "block.charm.birch_ladder": "樺木梯子",
+  "block.charm.birch_trapped_chest": "樺木陷阱箱",
   "block.charm.brain_prismarine": "腦紋海磷石",
   "block.charm.brain_prismarine_bricks": "腦紋海磷石磚",
   "block.charm.brain_sea_lantern": "腦紋海燈籠",
@@ -21,13 +21,13 @@
   "block.charm.bubble_prismarine_bricks": "氣泡海磷石磚",
   "block.charm.bubble_sea_lantern": "氣泡海燈籠",
   "block.charm.candle": "蠟燭",
-  "block.charm.crimson_barrel": "緋紅蕈桶",
-  "block.charm.crimson_bookcase": "緋紅蕈書櫃",
-  "block.charm.crimson_bookshelf": "緋紅蕈書架",
-  "block.charm.crimson_chest": "緋紅蕈箱子",
-  "block.charm.crimson_crate": "緋紅蕈板條箱",
-  "block.charm.crimson_ladder": "緋紅蕈梯子",
-  "block.charm.crimson_trapped_chest": "緋紅蕈陷阱箱",
+  "block.charm.crimson_barrel": "緋紅蕈木桶",
+  "block.charm.crimson_bookcase": "緋紅蕈木書櫃",
+  "block.charm.crimson_bookshelf": "緋紅蕈木書架",
+  "block.charm.crimson_chest": "緋紅蕈木箱子",
+  "block.charm.crimson_crate": "緋紅蕈木板條箱",
+  "block.charm.crimson_ladder": "緋紅蕈木梯子",
+  "block.charm.crimson_trapped_chest": "緋紅蕈木陷阱箱",
   "block.charm.dark_brain_prismarine": "暗腦紋海磷石",
   "block.charm.dark_bubble_prismarine": "暗氣泡海磷石",
   "block.charm.dark_fire_prismarine": "暗火海磷石",
@@ -88,13 +88,13 @@
   "block.charm.tube_prismarine": "管海磷石",
   "block.charm.tube_prismarine_bricks": "管海磷石磚",
   "block.charm.tube_sea_lantern": "管海燈籠",
-  "block.charm.warped_barrel": "扭曲蕈桶",
-  "block.charm.warped_bookcase": "扭曲蕈書櫃",
-  "block.charm.warped_bookshelf": "扭曲蕈書架",
-  "block.charm.warped_chest": "扭曲蕈箱子",
-  "block.charm.warped_crate": "扭曲蕈板條箱",
-  "block.charm.warped_ladder": "扭曲蕈梯子",
-  "block.charm.warped_trapped_chest": "扭曲蕈陷阱箱",
+  "block.charm.warped_barrel": "扭曲蕈木桶",
+  "block.charm.warped_bookcase": "扭曲蕈木書櫃",
+  "block.charm.warped_bookshelf": "扭曲蕈木書架",
+  "block.charm.warped_chest": "扭曲蕈木箱子",
+  "block.charm.warped_crate": "扭曲蕈木板條箱",
+  "block.charm.warped_ladder": "扭曲蕈木梯子",
+  "block.charm.warped_trapped_chest": "扭曲蕈木陷阱箱",
   "block.charm.woodcutter": "鋸木機",
   "container.charm.crate": "板條箱",
   "container.charm.kiln": "窯爐",
