--- a/charred_horizons/lang/zh_tw.json
+++ b/charred_horizons/lang/zh_tw.json
@@ -1,20 +1,20 @@
 {
   "advancement.charred_horizons.fiery_bow": "Harder Faster Better Stronger",
   "advancement.charred_horizons.fiery_bow.desc": "合成一把熾焰弓。",
-  "advancement.charred_horizons.fiery_spider": "完了是蜘蛛。",
+  "advancement.charred_horizons.fiery_spider": "完了，是蜘蛛。",
   "advancement.charred_horizons.fiery_spider.desc": "擊殺一只熾焰蜘蛛。",
   "advancement.charred_horizons.gold_ring": "魔戒全屬至尊馭⋯⋯",
-  "advancement.charred_horizons.gold_ring.desc": "在下界要塞或堡壘遺跡中找到一枚金戒指。",
+  "advancement.charred_horizons.gold_ring.desc": "在地獄要塞或堡壘遺跡中找到一枚金戒指。",
   "advancement.charred_horizons.improved_farmland": "磨刀不誤耕地工",
   "advancement.charred_horizons.improved_farmland.desc": "合成一個改良耕地。",
   "advancement.charred_horizons.mysterious_charm": "一步一腳印",
-  "advancement.charred_horizons.mysterious_charm.desc": "在下界要塞中找到一個神秘護符。",
+  "advancement.charred_horizons.mysterious_charm.desc": "在地獄要塞中找到一個神秘護符。",
   "advancement.charred_horizons.spore_creeper": "小心孢子",
   "advancement.charred_horizons.spore_creeper.desc": "擊殺一只孢子苦力怕。",
   "advancement.charred_horizons.sulfuric_skeleton": "何等褻瀆！",
   "advancement.charred_horizons.sulfuric_skeleton.desc": "擊殺一只硫磺骷髏。",
   "advancements.charred_horizons.explore_nether": "全新視野！",
-  "advancements.charred_horizons.explore_nether.description": "探索所有Charred Horizons的下界生物群系。",
+  "advancements.charred_horizons.explore_nether.description": "探索所有Charred Horizons的地獄生物群系。",
   "block.charred_horizons.blight_button": "枯黃木按鈕",
   "block.charred_horizons.blight_door": "枯黃木門",
   "block.charred_horizons.blight_fence": "枯黃木柵欄",
@@ -22,8 +22,8 @@
   "block.charred_horizons.blight_fungus": "枯黃菌",
   "block.charred_horizons.blight_hanging_sign": "懸掛式枯黃木告示牌",
   "block.charred_horizons.blight_hyphae": "枯黃菌核",
-  "block.charred_horizons.blight_nether_wart": "枯黃下界疣",
-  "block.charred_horizons.blight_nylium": "枯黃菌巖",
+  "block.charred_horizons.blight_nether_wart": "枯黃地獄疙瘩",
+  "block.charred_horizons.blight_nylium": "枯黃菌岩",
   "block.charred_horizons.blight_planks": "枯黃木板",
   "block.charred_horizons.blight_pressure_plate": "枯黃木壓力板",
   "block.charred_horizons.blight_root": "枯黃菌索",
@@ -39,30 +39,30 @@
   "block.charred_horizons.mystic_mushroom": "神秘菇",
   "block.charred_horizons.mystic_mushroom_block": "神秘菇方塊",
   "block.charred_horizons.mystic_mushroom_stem": "神秘菇柄",
-  "block.charred_horizons.mystic_nylium": "神秘菌巖",
+  "block.charred_horizons.mystic_nylium": "神秘菌岩",
   "block.charred_horizons.mystic_root": "神秘菌索",
   "block.charred_horizons.mystic_vines": "隱秘藤",
   "block.charred_horizons.mystic_vines_plant": "隱秘藤植株",
   "block.charred_horizons.stripped_blight_hyphae": "去皮枯黃菌核",
   "block.charred_horizons.stripped_blight_stem": "枯黃菌柄",
-  "block.charred_horizons.stripped_withered_hyphae": "去皮雕零菌核",
-  "block.charred_horizons.stripped_withered_stem": "雕零菌柄",
-  "block.charred_horizons.withered_button": "雕零木按鈕",
-  "block.charred_horizons.withered_door": "雕零木門",
-  "block.charred_horizons.withered_fence": "雕零木柵欄",
-  "block.charred_horizons.withered_fence_gate": "雕零木柵欄門",
-  "block.charred_horizons.withered_fungus": "雕零菌",
-  "block.charred_horizons.withered_hanging_sign": "懸掛式雕零木告示牌",
-  "block.charred_horizons.withered_hyphae": "雕零菌核",
-  "block.charred_horizons.withered_nether_wart": "雕零下界疣",
-  "block.charred_horizons.withered_nylium": "雕零菌巖",
-  "block.charred_horizons.withered_planks": "雕零木板",
-  "block.charred_horizons.withered_pressure_plate": "雕零木壓力板",
-  "block.charred_horizons.withered_sign": "雕零木告示牌",
-  "block.charred_horizons.withered_slab": "雕零木台階",
-  "block.charred_horizons.withered_stairs": "雕零木樓梯",
-  "block.charred_horizons.withered_stem": "雕零菌柄",
-  "block.charred_horizons.withered_trapdoor": "雕零木地板門",
+  "block.charred_horizons.stripped_withered_hyphae": "去皮凋零菌核",
+  "block.charred_horizons.stripped_withered_stem": "凋零菌柄",
+  "block.charred_horizons.withered_button": "凋零木按鈕",
+  "block.charred_horizons.withered_door": "凋零木門",
+  "block.charred_horizons.withered_fence": "凋零木柵欄",
+  "block.charred_horizons.withered_fence_gate": "凋零木柵欄門",
+  "block.charred_horizons.withered_fungus": "凋零菌",
+  "block.charred_horizons.withered_hanging_sign": "懸掛式凋零木告示牌",
+  "block.charred_horizons.withered_hyphae": "凋零菌核",
+  "block.charred_horizons.withered_nether_wart": "凋零地獄疙瘩",
+  "block.charred_horizons.withered_nylium": "凋零菌岩",
+  "block.charred_horizons.withered_planks": "凋零木板",
+  "block.charred_horizons.withered_pressure_plate": "凋零木壓力板",
+  "block.charred_horizons.withered_sign": "凋零木告示牌",
+  "block.charred_horizons.withered_slab": "凋零木台階",
+  "block.charred_horizons.withered_stairs": "凋零木樓梯",
+  "block.charred_horizons.withered_stem": "凋零菌柄",
+  "block.charred_horizons.withered_trapdoor": "凋零木地板門",
   "creative_tab.charred_horizons.block": "Charred Horizons丨方塊",
   "creative_tab.charred_horizons.item": "Charred Horizons丨物品",
   "entity.charred_horizons.fiery_spider": "熾焰蜘蛛",
@@ -76,10 +76,10 @@
   "item.charred_horizons.fiery_string": "熾焰絲線",
   "item.charred_horizons.gold_ring": "黃金戒指",
   "item.charred_horizons.mysterious_charm": "神秘護符",
-  "item.charred_horizons.netherite_ring.effect": "豬靈對你中立。",
+  "item.charred_horizons.netherite_ring.effect": "豬布林對你中立。",
   "item.charred_horizons.sulfur_dust": "硫磺粉",
   "item.charred_horizons.sulfuric_bone": "硫磺骨",
   "item.charred_horizons.sulfuric_bone_meal": "硫磺骨粉",
   "item.charred_horizons.sulfuric_skeleton_egg": "硫磺骷髏生怪蛋",
-  "item.charred_horizons.withered_sword": "雕靈骷髏劍"
+  "item.charred_horizons.withered_sword": "凋零骷髏劍"
 }
