--- a/chemlib/lang/zh_tw.json
+++ b/chemlib/lang/zh_tw.json
@@ -100,10 +100,10 @@
   "chemlib.jei.compound.cadmium_hydroxide.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.cadmium_nitrate.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.cadmium_sulfate.description": "目前尚不明確這種化學品的用途。",
-  "chemlib.jei.compound.cadmium_sulfide.description": "除了用作顏料外，這種化學物質還可以用於制造薄膜太陽能電池。",
+  "chemlib.jei.compound.cadmium_sulfide.description": "除了用作顏料外，這種化學物質還可以用於製造薄膜太陽能電池。",
   "chemlib.jei.compound.caffeine.description": "世界上最受歡迎的提神藥物。可以從咖啡和可可豆中提取。",
   "chemlib.jei.compound.calcium_carbonate.description": "這種化合物是石灰石中的主要成分，也存在於貝類、珍珠和蛋殼中。它也經常作為抗酸片出售。",
-  "chemlib.jei.compound.calcium_hydroxide.description": "也稱為熟石灰。這種化學品可用於砂漿的制備以及污水處理。",
+  "chemlib.jei.compound.calcium_hydroxide.description": "也稱為熟石灰。這種化學品可用於砂漿的製備以及污水處理。",
   "chemlib.jei.compound.calcium_nitrate.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.calcium_oxide.description": "也稱為生石灰。這種化學物質通常用於工業過程，不過羅馬人將其用作武器。",
   "chemlib.jei.compound.calcium_sulfate.description": "也稱為石膏，這種化合物具有良好的生物相容性，可用於骨移植。",
@@ -111,7 +111,7 @@
   "chemlib.jei.compound.carbon_disulfide.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.carbon_monoxide.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.carbonate.description": "碳酸根可以與金屬結合形成許多種類的碳酸鹽。它最簡單的碳的含氧酸根。",
-  "chemlib.jei.compound.cellulose.description": "纖維素是綠色植物的重要結構成分，是地球上最豐富的大分子有機物。它用於制造紙張，並且在化學處理後可以制造玻璃紙塑料。",
+  "chemlib.jei.compound.cellulose.description": "纖維素是綠色植物的重要結構成分，是地球上最豐富的大分子有機物。它用於製造紙張，並且在化學處理後可以製造玻璃紙塑料。",
   "chemlib.jei.compound.cesium_carbonate.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.cesium_chloride.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.cesium_hydroxide.description": "目前尚不明確這種化學品的用途。",
@@ -136,7 +136,7 @@
   "chemlib.jei.compound.ethane.description": "僅次於甲烷，天然氣的第二大成分。",
   "chemlib.jei.compound.ethanol.description": "乙醇或者叫酒精，這種液體可以通過發酵制成，並且在高濃度下易燃。",
   "chemlib.jei.compound.ethylene.description": "這種化學品廣泛用於工業化學，特別是在聚乙烯塑料的合成中。",
-  "chemlib.jei.compound.han_purple.description": "一種傳統的中國顏料，制造這種化合物的配方可能來自對早期埃及藍的改進。",
+  "chemlib.jei.compound.han_purple.description": "一種傳統的中國顏料，製造這種化合物的配方可能來自對早期埃及藍的改進。",
   "chemlib.jei.compound.hexane.description": "一種非極性溶劑，己烷通常用於生產皮革和膠水。",
   "chemlib.jei.compound.hydrochloric_acid.description": "被煉金術士稱為蝕刻之油或磺強水。當與硝酸混合後，它被稱為王水;一種能夠溶解黃金的酸。",
   "chemlib.jei.compound.hydrogen_sulfide.description": "這種有毒的腐蝕性氣體被礦工稱為\"臭蛋氣\"。因為它密度大於空氣，會沈降在地下。",
@@ -148,7 +148,7 @@
   "chemlib.jei.compound.iron_ii_sulfate.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.iron_iii_nitrate.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.iron_oxide.description": "氧化鐵也被稱為赤鐵礦，是煉鋼中常用的礦石。它也可以用作拋光磨料，或用作顏料。",
-  "chemlib.jei.compound.kaolinite.description": "由高嶺土制成的巖石被稱為高嶺土。它是一種用於陶瓷的流行材料。它有時也作為零食或健康食品食用，盡管它幾乎沒有飲食益處。",
+  "chemlib.jei.compound.kaolinite.description": "由高嶺土制成的岩石被稱為高嶺土。它是一種用於陶瓷的流行材料。它有時也作為零食或健康食品食用，盡管它幾乎沒有飲食益處。",
   "chemlib.jei.compound.keratin.description": "一種纖維蛋白，這種化合物組成頭發、指甲、羽毛、角、鱗片、爪子、蹄子和皮膚。",
   "chemlib.jei.compound.lead_carbonate.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.lead_iodide.description": "一種傳統的鉛顏料。由於毒性，在現代很少使用。",
@@ -166,7 +166,7 @@
   "chemlib.jei.compound.magnesium_chloride.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.magnesium_hydroxide.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.magnesium_nitrate.description": "目前尚不明確這種化學品的用途。",
-  "chemlib.jei.compound.magnesium_oxide.description": "也稱為方鎂石，這種礦物具有很強的耐熱性和耐壓性。它是接觸變質巖中的常見成分。",
+  "chemlib.jei.compound.magnesium_oxide.description": "也稱為方鎂石，這種礦物具有很強的耐熱性和耐壓性。它是接觸變質岩中的常見成分。",
   "chemlib.jei.compound.magnesium_sulfate.description": "也被稱為瀉鹽或浴鹽，它是海水中的主要鹽之一，也是聲音不能很好地穿過海洋的主要原因。",
   "chemlib.jei.compound.manganese_carbonate.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.manganese_hydroxide.description": "目前尚不明確這種化學品的用途。",
@@ -175,7 +175,7 @@
   "chemlib.jei.compound.manganese_sulfate.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.mercury_sulfide.description": "這種紅色化合物被稱為朱紅或朱砂，自古希臘以來一直被用作色素。",
   "chemlib.jei.compound.methane.description": "甲烷是天然氣的主要成分，可以在沼澤氣體中自然發現。",
-  "chemlib.jei.compound.mullite.description": "具有高熔點和堅固的晶體結構，可用來制造堅固的瓷器。",
+  "chemlib.jei.compound.mullite.description": "具有高熔點和堅固的晶體結構，可用來製造堅固的瓷器。",
   "chemlib.jei.compound.nickel_carbonate.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.nickel_chloride.description": "當鹽與其他物質形成絡合物時，這種化學物質可以變成各種各樣的顏色，但綠色是最常見的。",
   "chemlib.jei.compound.nickel_nitrate.description": "目前尚不明確這種化學品的用途。",
@@ -201,7 +201,7 @@
   "chemlib.jei.compound.potassium_permanganate.description": "傳統上用作消毒劑，這種化學物質既可用於傷口，也可用於凈化水，盡管它往往會使水變成粉紅色。",
   "chemlib.jei.compound.potassium_sulfate.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.propane.description": "在標準壓力下，丙烷可以被壓縮成液體來方便運輸。",
-  "chemlib.jei.compound.protein.description": "蛋白質是由氨基酸鏈組成的大而覆雜的分子，是所有生物的組成成分。這種蛋白質是最簡單的蛋白質之一，被稱為半胱氨酸。",
+  "chemlib.jei.compound.protein.description": "蛋白質是由氨基酸鏈組成的大而複雜的分子，是所有生物的組成成分。這種蛋白質是最簡單的蛋白質之一，被稱為半胱氨酸。",
   "chemlib.jei.compound.rubidium_carbonate.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.rubidium_chloride.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.rubidium_hydroxide.description": "目前尚不明確這種化學品的用途。",
@@ -211,12 +211,12 @@
   "chemlib.jei.compound.silicon_dioxide.description": "也被稱為二氧化矽，這種豐富的礦物質是沙子的主要成分，也是幾乎所有礦物的關鍵成分。晶體形式包括透明石英和蛋白石。",
   "chemlib.jei.compound.sodium_bisulfate.description": "這種酸鹽通常用於清潔產品，也可以在一些蛋糕混合物中找到。",
   "chemlib.jei.compound.sodium_carbonate.description": "這種化學物質被稱為純堿，傳統上是從植物的灰燼中提取的。既可用於清潔，也可用於比小蘇打的堿性更強的替代品。",
-  "chemlib.jei.compound.sodium_chloride.description": "普通食鹽，是海水鹽度的鹽分占比最大的成分。它在制造和電解中有許多用途。",
+  "chemlib.jei.compound.sodium_chloride.description": "普通食鹽，是海水鹽度的鹽分占比最大的成分。它在製造和電解中有許多用途。",
   "chemlib.jei.compound.sodium_hydroxide.description": "也稱為苛性鈉，它可以分解蛋白質，引起嚴重的化學灼傷。它也被用作肥皂生產中的酯化物。",
   "chemlib.jei.compound.sodium_nitrate.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.sodium_oxide.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.sodium_sulfate.description": "目前尚不明確這種化學品的用途。",
-  "chemlib.jei.compound.starch.description": "澱粉是人類飲食中最常見的碳水化合物。它也被用來制造生物塑料。",
+  "chemlib.jei.compound.starch.description": "澱粉是人類飲食中最常見的碳水化合物。它也被用來製造生物塑料。",
   "chemlib.jei.compound.strontium_carbonate.description": "被稱為鍶鈦礦，當與其他金屬摻雜後，可顯著提高導電性。並且擁有良好的光電轉換效率。",
   "chemlib.jei.compound.strontium_chloride.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.strontium_hydroxide.description": "目前尚不明確這種化學品的用途。",
@@ -236,7 +236,7 @@
   "chemlib.jei.compound.zinc_carbonate.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.zinc_hydroxide.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.zinc_nitrate.description": "目前尚不明確這種化學品的用途 。",
-  "chemlib.jei.compound.zinc_oxide.description": "一種寬帶隙半導體，這種礦物對於制造透明電子產品很有用。",
+  "chemlib.jei.compound.zinc_oxide.description": "一種寬帶隙半導體，這種礦物對於製造透明電子產品很有用。",
   "chemlib.jei.compound.zinc_sulfate.description": "目前尚不明確這種化學品的用途。",
   "chemlib.jei.compound.zinc_sulfide.description": "被稱為閃鋅礦，這種化合物可以發出磷光，與合適的活化劑混合。廣泛用於CRT、X射線機和黑暗中的發光玩具。",
   "chemlib.jei.element.description": "使用元素周期表來了解有關此元素的更多信息。",
@@ -397,8 +397,8 @@
   "item.chemlib.beryllium_plate": "鈹板",
   "item.chemlib.beryllium_sulfate": "硫酸鈹",
   "item.chemlib.beryllium_sulfate_dust": "硫酸鈹粉",
-  "item.chemlib.beta_carotene": "β-胡蘿卜素",
-  "item.chemlib.beta_carotene_dust": "β-胡蘿卜素粉",
+  "item.chemlib.beta_carotene": "β-胡蘿蔔素",
+  "item.chemlib.beta_carotene_dust": "β-胡蘿蔔素粉",
   "item.chemlib.bismuth": "鉍",
   "item.chemlib.bismuth_dust": "鉍粉",
   "item.chemlib.bismuth_ingot": "鉍錠",
@@ -503,7 +503,7 @@
   "item.chemlib.cobalt_plate": "鈷板",
   "item.chemlib.cobalt_sulfate": "硫酸鈷",
   "item.chemlib.cobalt_sulfate_dust": "硫酸鈷粉",
-  "item.chemlib.copernicium": "鿔",
+  "item.chemlib.copernicium": "鎶",
   "item.chemlib.copper": "銅",
   "item.chemlib.copper_carbonate": "碳酸銅",
   "item.chemlib.copper_carbonate_dust": "碳酸銅粉",
