--- a/chickens/lang/zh_tw.json
+++ b/chickens/lang/zh_tw.json
@@ -1,10 +1,10 @@
 {
   "itemGroup.chickens": "雞",
-  "itemGroup.chickens_spawneggs": "雞刷怪蛋",
+  "itemGroup.chickens_spawneggs": "雞 生怪蛋",
   "itemGroup.chickens_blocks": "雞方塊",
   "item.liquid_egg.tooltip": "像一個一次性水桶。",
   "item.liquid_egg.water.name": "水雞蛋",
-  "item.liquid_egg.lava.name": "熔巖雞蛋",
+  "item.liquid_egg.lava.name": "熔岩雞蛋",
   "item.chickens.analyzer": "雞分析儀",
   "item.analyzer.tooltip1": "對雞使用來檢測它們的屬性。",
   "item.analyzer.tooltip2": " - “雞最討厭一星期中的哪一天？星期五！（因為 Fry-Day ⸺譯者注）”",
@@ -15,20 +15,20 @@
   "item.colored_egg.white.name": "白雞蛋",
   "entity.chickens.orange_chicken": "橙雞",
   "item.colored_egg.orange.name": "橙雞蛋",
-  "entity.chickens.magenta_chicken": "品紅雞",
-  "item.colored_egg.magenta.name": "品紅雞蛋",
-  "entity.chickens.light_blue_chicken": "淡藍雞",
-  "item.colored_egg.light_blue.name": "淡藍雞蛋",
+  "entity.chickens.magenta_chicken": "洋紅雞",
+  "item.colored_egg.magenta.name": "洋紅雞蛋",
+  "entity.chickens.light_blue_chicken": "淺藍雞",
+  "item.colored_egg.light_blue.name": "淺藍雞蛋",
   "entity.chickens.yellow_chicken": "黃雞",
   "item.colored_egg.yellow.name": "黃雞蛋",
-  "entity.chickens.lime_chicken": "黃綠雞",
-  "item.colored_egg.lime.name": "黃綠雞蛋",
+  "entity.chickens.lime_chicken": "淺綠雞",
+  "item.colored_egg.lime.name": "淺綠雞蛋",
   "entity.chickens.pink_chicken": "粉紅雞",
   "item.colored_egg.pink.name": "粉紅雞蛋",
   "entity.chickens.gray_chicken": "灰雞",
   "item.colored_egg.gray.name": "灰雞蛋",
-  "entity.chickens.light_gray_chicken": "淡灰雞",
-  "item.colored_egg.light_gray.name": "淡灰雞蛋",
+  "entity.chickens.light_gray_chicken": "淺灰雞",
+  "item.colored_egg.light_gray.name": "淺灰雞蛋",
   "entity.chickens.cyan_chicken": "青雞",
   "item.colored_egg.cyan.name": "青雞蛋",
   "entity.chickens.purple_chicken": "紫雞",
@@ -46,23 +46,23 @@
   "entity.chickens.gunpowder_chicken": "火藥雞",
   "entity.chickens.flint_chicken": "燧石雞",
   "entity.chickens.snowball_chicken": "雪球雞",
-  "entity.chickens.lava_chicken": "熔巖雞",
-  "entity.chickens.quartz_chicken": "下界石英雞",
+  "entity.chickens.lava_chicken": "熔岩雞",
+  "entity.chickens.quartz_chicken": "地獄石英雞",
   "entity.chickens.redstone_chicken": "紅石雞",
-  "entity.chickens.glowstone_chicken": "熒石雞",
+  "entity.chickens.glowstone_chicken": "螢光石雞",
   "entity.chickens.iron_chicken": "鐵雞",
   "entity.chickens.coal_chicken": "煤雞",
   "entity.chickens.clay_chicken": "黏土雞",
   "entity.chickens.slime_chicken": "史萊姆雞",
   "entity.chickens.water_chicken": "水雞",
-  "entity.chickens.netherwart_chicken": "下界疣雞",
+  "entity.chickens.netherwart_chicken": "地獄疙瘩雞",
   "entity.chickens.gold_chicken": "金雞",
-  "entity.chickens.diamond_chicken": "鉆石雞",
+  "entity.chickens.diamond_chicken": "鑽石雞",
   "entity.chickens.blaze_chicken": "烈焰棒雞",
   "entity.chickens.emerald_chicken": "綠寶石雞",
-  "entity.chickens.ender_chicken": "末影珍珠雞",
-  "entity.chickens.ghast_chicken": "惡魂之淚雞",
-  "entity.chickens.magma_chicken": "巖漿膏雞",
+  "entity.chickens.ender_chicken": "終界珍珠雞",
+  "entity.chickens.ghast_chicken": "幽靈之淚雞",
+  "entity.chickens.magma_chicken": "岩漿膏雞",
   "entity.chickens.string_chicken": "線雞",
   "entity.chickens.log_chicken": "原木雞",
   "entity.chickens.sand_chicken": "沙子雞",
@@ -94,13 +94,13 @@
   "gui.throws": "彩色雞蛋扔出產物",
   "gui.henhousing": "雞舍副產物",
   "container.henhouse": "雞舍",
-  "block.chickens.henhouse.tooltip": "當提供幹草堆時，它會自動收集9x9x9半徑內來自雞的物品。",
+  "block.chickens.henhouse.tooltip": "當提供乾草堆時，它會自動收集9x9x9半徑內來自雞的物品。",
   "block.chickens.henhouse": "雞舍",
-  "block.chickens.henhouse_acacia": "金合歡木雞舍",
-  "block.chickens.henhouse_birch": "白樺木雞舍",
-  "block.chickens.henhouse_dark_oak": "深色橡木雞舍",
+  "block.chickens.henhouse_acacia": "相思木雞舍",
+  "block.chickens.henhouse_birch": "樺木雞舍",
+  "block.chickens.henhouse_dark_oak": "黑橡木雞舍",
   "block.chickens.henhouse_jungle": "叢林木雞舍",
-  "block.chickens.henhouse_spruce": "雲杉木雞舍",
+  "block.chickens.henhouse_spruce": "杉木雞舍",
   "block.chickens.breeder": "飼養槽",
   "block.chickens.roost": "雞窩"
 }
