--- a/chilibulletweapons/lang/zh_tw.json
+++ b/chilibulletweapons/lang/zh_tw.json
@@ -25,7 +25,7 @@
   "item.chilibulletweapons.half_chili_meat_sandwich": "半份辣椒配肉三明治",
   "item.chilibulletweapons.half_chili_potato_sandwich": "半份辣椒馬鈴薯三明治",
   "item.chilibulletweapons.machine_gun": "辣椒彈機槍",
-  "item.chilibulletweapons.pasta_oil_and_chili": "辣椒意面",
+  "item.chilibulletweapons.pasta_oil_and_chili": "辣椒意麵",
   "item.chilibulletweapons.upgrade_gun_barrel": "槍管升級",
   "item.chilibulletweapons.upgrade_gun_bayonet": "刺刀升級",
   "item.chilibulletweapons.upgrade_gun_mechanism": "槍械機構升級",
